# football-graph

./: .gitignore  README.md  pyproject.toml
nwsl_graph/: __init__.py  __main__.py  badges.py  cli.py  csv_io.py  fetch.py  graphviz_emit.py  http_util.py  models.py  parse_espn.py  standings.py
