[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nwsl-graph"
version = "0.1.0"
description = "NWSL season results as a Graphviz graph"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "graphviz>=0.20",
]

[project.scripts]
nwsl-graph = "nwsl_graph.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["nwsl_graph"]
